tests/snapshots/run_wpt_conformance__onnx_notEqual_float16_broadcast_4D_to_5D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "not_equal.https.any.js",
    "notEqual float16 broadcast 4D to 5D",
    "onnx",
    "PASS",
)
